fix: button-visibility

--- a/src/components/Question/Question.css
+++ b/src/components/Question/Question.css
@@ -27,7 +27,10 @@
     text-align: center;
     border-radius: 5px;
 }
-
+.option.selected {
+    background-color: black;
+    color: white;
+}
 .option-input{
     display: none;
 }
